WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
67037
[EFL] Do not log an error if a fallback cursor cannot be found.
https://bugs.webkit.org/show_bug.cgi?id=67037
Summary
[EFL] Do not log an error if a fallback cursor cannot be found.
Raphael Kubo da Costa (:rakuco)
Reported
2011-08-26 08:02:43 PDT
[EFL] Do not log an error if a fallback cursor cannot be found.
Attachments
Patch
(1.50 KB, patch)
2011-08-26 09:08 PDT
,
Raphael Kubo da Costa (:rakuco)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Raphael Kubo da Costa (:rakuco)
Comment 1
2011-08-26 09:08:48 PDT
Created
attachment 105359
[details]
Patch
Gustavo Noronha (kov)
Comment 2
2011-08-26 09:54:07 PDT
Comment on
attachment 105359
[details]
Patch LGTM.
WebKit Review Bot
Comment 3
2011-08-26 10:59:42 PDT
Comment on
attachment 105359
[details]
Patch Clearing flags on attachment: 105359 Committed
r93890
: <
http://trac.webkit.org/changeset/93890
>
WebKit Review Bot
Comment 4
2011-08-26 10:59:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug