[EFL] Do not log an error if a fallback cursor cannot be found. https://bugs.webkit.org/show_bug.cgi?id=67037

Patch by Raphael Kubo da Costa <kubo@profusion.mobi> on 2011-08-26
Reviewed by Gustavo Noronha Silva.

Ecore_X does not necessarily have to be used (DumpRenderTree does not
use it, for example), so showing an error message here is bogus.

No new tests, as it just removes erroneous error messages from
when running DRT with existing tests.

* platform/efl/WidgetEfl.cpp:
(WebCore::Widget::applyFallbackCursor):

Canonical link: https://commits.webkit.org/82834@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93890 268f45cc-cd09-0410-ab3c-d52691b4dbfc